# slack_integrations

./: README.md  main.py  pyproject.toml  slack_connection.py  testing.py
apps/slack-integrations-offline/: README.md  main.py  pyproject.toml  slack_connection.py  testing.py
apps/slack-integrations-offline/configs/: collect_crawl_data.yaml  etl.yaml  testing_pipeline.yaml
apps/slack-integrations-offline/data/: clearfeed_crawled_documents.md  crawled_documents.md  runllm_crawled_documents.md
apps/slack-integrations-offline/pipelines/: __init__.py  collect_crawl_data.py  etl.py  testing_pipeline.py
apps/slack-integrations-offline/src/slack_integrations_offline/: config.py  utils.py
apps/slack-integrations-offline/src/slack_integrations_offline/domain/: document.py
apps/slack-integrations-offline/src/slack_integrations_offline/infrastructure/aws/: s3.py
apps/slack-integrations-offline/src/slack_integrations_offline/rag/: embeddings.py  retrievers.py  splitters.py
apps/slack-integrations-offline/steps/: __init__.py  testing_step.py
apps/slack-integrations-offline/steps/collect_crawl_data/: extract_crawled_data.py
apps/slack-integrations-offline/steps/collect_urls/: extract_urls_from_sitemap.py
apps/slack-integrations-offline/steps/compute_rag/: chunk_embed_load.py
apps/slack-integrations-offline/steps/generate_summaries/: generate_summary.py
apps/slack-integrations-offline/steps/infrastructure/: __init__.py  fetch_from_mongodb.py  ingest_to_mongodb.py  read_documents_from_disk.py  upload_to_s3.py
apps/slack-integrations-offline/tools/: run.py
(+15 files in other folders)
