[project]
name = "slack-integrations-offline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.0",
    "bson>=0.5.10",
    "crawl4ai>=0.3.745",
    "loguru>=0.7.3",
    "pymongo>=4.4.0",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.37.0",
    "zenml[server]>=0.73.0",
]
